# KeyReaper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.bat  configure.ps1
TitanEngine/: README.md
include/: cryptoapi.h  key_scanner.h  scanners.h
include/craper/: cryptoapi.h  key.h  key_scanner.h  process_capturer.h  scanners.h
include/craper/injection/: injector.h  interproc_coms.h
include/interrogate/: aes.h
include/keyreaper/: config.h  cryptoapi.h  key.h  key_scanner.h  process_capturer.h  program_result.h  scanners.h
include/keyreaper/injection/: custom_ipc.h  injector.h  interproc_coms.h
include/ntdll/: ntdll.h  winntheap.h
lib/interrogate/: Makefile
src/: CipherAlgorithm.h  Key.h  KeyScanner.cpp  KeyScanner.h  KeySize.h  KeyType.h  ProcessCapturer.cc  ProcessCapturer.cpp  ProcessCapturer.h  ProgramResult.cpp  ProgramResult.h  ResultType.h  cifrar3.cpp  config.cc  cryptoapi.cc  cryptoapi.h  key.cc  key.h  key_scanner.cc  key_scanner.h  main.cc  process_capturer.cc  process_capturer.h  program_result.cc  program_result.h  scanners.cc  scanners.h
src/custom-ransomware/: basic-CNG-ransomware.cc  basic-ransomware.cc
src/decryptors/PoCDcryptor/: poc-decryptor.cc
src/injection/: cryptoapi_key_exporter.cc  custom_ipc.cc  injector.cc  injector_program.cc  interproc_coms.cc  interproc_coms.h
src/injection/test/: dumb.cc  evil.cpp  evil_inj.cpp  test_client.cc  test_server.cc
src/interrogate/: aes.cc
src/scripts/: false_neg.ps1  increasing_heap.ps1  run-n-capture-v1.ps1  stress-test.ps1
